more flexible UpdateIndex java client API add setIndexes to Search java client API